--- a/src/Search.css
+++ b/src/Search.css
@@ -1,35 +1,105 @@
-  
+  :root{
+    --globalFont:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    --globalLetterSpacing:2px;
+  }
+
+  html{
+    background: rgb(255,250,252);
+    background: radial-gradient(circle, rgba(255,250,252,1) 0%, rgba(202,214,228,1) 100%);
+    font:var(--globalFont);
+    letter-spacing: var(--globalLetterSpacing);
+  }
+
   .parent {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(6, 150px);
-  grid-column-gap: 0px;
-  grid-row-gap: 0px;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(7, 150px);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
   }
 
   .footer{
-    grid-area: 9 / 9 / 3 / 9; 
+    grid-area: 9 / 1 / 10 / 10; 
     width:100%;
-    height:50px;
+    height:100px;
     background-color: black;
   }
   
   /* Nav Bar */
   .div1 { 
-    grid-area: 1 / 1 / 3 / 9; 
-    
+    grid-area: 1 / 1 / 4 / 9; 
     /* justify-self: left; */
     /* color:white; */
     z-index:9;
     /* background-color: black; */
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
+    background-image: url('./landingbackground.jpeg');
+    background-size: cover;
     width:100%;
+    color:white;
+  }
+  .landingBanner{
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    justify-content: center;
+  }
+
+  .bannerElements {
+    flex-shrink: 5;
+  }
+
+
+  /* Add a black background color to the top navigation */
+  .navBar {
+    position:fixed;
+    width:100vw;
+    display: flex;
+    z-index: 1;
+    background-color:black;
+    overflow: hidden;
+    justify-content: center;
+
+
+    font-family:var(--globalFont);
+    letter-spacing: var(--globalLetterSpacing);
+
+  }
+
+  /* logo */
+
+  .logo {
+    width:200px;
+    height:50px;
+    object-fit:cover;
+    margin-top:-5%;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  /* Style the links inside the navigation bar */
+  .navBar a {
+    display: inline-flex;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
   }
 
   .nominees{
     position:fixed;
+    margin-top:5vh;
     /* background-color: black; */
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
+    min-height:10vh;
+    height:fit-content;
+    padding-top:2%;
+    background-color: black;
     width:100%;
     right:0;
     display:flex;
@@ -52,7 +122,7 @@
       padding-bottom:0.5%;
       padding-right:0.5%;
       padding-left:0.5%;
-
+      height: fit-content;
       width:fit-content;
       color:white;
       font-weight: bold;
@@ -94,28 +164,62 @@
   /* Search Form Title */
 
   .div2 {
-    grid-area: 2 / 2 / 3 / 8; 
+    grid-area: 2 / 2 / 4 / 8; 
   }
 
   /* Input */
 
     .div3 {
-      grid-area: 4 / 2 / 5 / 6;
+      grid-area: 4 / 1 / 5 / 9;
       width: 100%;
       justify-self: center;
+      background-color: black;
     }
-/* 
-    .div3 > input{
-      width:60%;
-      height:30px;
-    } */
 
     .searchBar{
-      width:75%;
-      height:4vh;
-      border-radius: 10px;
-      border:5px solid black;
+      margin-top:5%;
+      width:50%;
+      height:5vh;
+      color:white !important;
+      border:3px solid white;
+      border-radius: 20px;
+      background-color: transparent;
+      text-transform:capitalize;
+
+      font-size: larger;
+      padding-left: 1%;
+      padding-right: 1%;
+
+
+      font-family:var(--globalFont);
+      letter-spacing: var(--globalLetterSpacing);
     }
+
+    .submitQuery{
+      margin-top:5%;
+      margin-left: 1%;
+      color:white;
+      border:3px solid white;
+      border-radius: 20px;
+      background-color: transparent;
+      width:20%;
+      height:5vh;
+      text-transform:capitalize;
+      font-size: larger;
+
+
+      font-family:var(--globalFont);
+      letter-spacing: var(--globalLetterSpacing);
+    }
+
+    .submitQuery:hover{
+      background: rgb(131,58,180);
+      background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);      
+    }
+
+
+
+
 
   /* Button */
 
@@ -136,14 +240,48 @@
 
     }
 
+  @-webkit-keyframes slideInRight {
+
+    0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    visibility: visible;
+    }
+
+    100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    }
+
+    }
+
+  @keyframes slideInRight {
+
+    0% {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+    visibility: visible;
+    }
+
+    100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    }
+
+  } 
+
   .div5{
-    grid-area: 5 / 1 / 6 / 9; 
+    grid-area: 5 / 1 / 9 / 9; 
     /* justify-self: left;
     text-align: left; */
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    padding-top:10%;
+    padding-bottom:10px;
+    padding-left: 12%;
+    padding-right:12%;
   }
 
     .div5 > button {
@@ -163,6 +301,40 @@
     z-index: 9;
   } */
 
+  /* Buttons */
+  .paginateButtons{
+    align-self: flex-end;
+    padding-bottom: 2%;
+  }
+
+  .paginateBackwards{
+    position:absolute;
+    left:25%;
+    background-color: transparent;
+    border:none;
+
+    font-size:large;
+    text-decoration: underline;
+
+    font-family:var(--globalFont);
+    letter-spacing: var(--globalLetterSpacing);
+  }
+
+  .paginateForwards{
+    position:absolute;
+    right:25%;
+    background-color: transparent;
+    border:none;
+
+    font-size:large;
+    text-decoration: underline;
+
+    font-family:var(--globalFont);
+    letter-spacing: var(--globalLetterSpacing);
+  }
+
+  /* movies */
+
     .movieCard{
       flex-shrink:0;
       background-color:rgba(204, 0, 0, 0.981);
@@ -170,16 +342,16 @@
       border-radius: 5px;
       -webkit-box-shadow: -10px 0px 13px -7px #464646, 10px 0px 13px -7px #464646, 5px 5px 15px 5px rgba(0,0,0,0); 
       box-shadow: -10px 0px 13px -7px #464646, 10px 0px 13px -7px #464646, 5px 5px 15px 5px rgba(0,0,0,0);
-      height:310px;
+      height:300px;
       width:300px;
-      padding-bottom:5%;
+      padding-bottom:50px;
       margin-left:20px;
       margin-right:20px;
       margin-bottom:3%;
     }
 
       .moviePoster{
-          height:250px;
+          height:150px;
           width:300px;
           object-fit: cover;
           object-position:top;
@@ -189,7 +361,10 @@
           position: relative;
           text-align: center;
           color:aliceblue;
-          font-weight: bolder;
+          font-weight:800;
+
+          font-family:var(--globalFont);
+          letter-spacing: var(--globalLetterSpacing);
         }
         
         .movieYear{
@@ -197,6 +372,10 @@
           text-align: center;
           color:aliceblue;
           font-weight:normal;
+
+
+          font-family:var(--globalFont);
+          letter-spacing: var(--globalLetterSpacing);
         }
 
         .movieCard > button {
@@ -208,7 +387,11 @@
           border-style: solid;
           border-width: 2px;
           background-color: transparent;
-          font-weight: bold;
+          font-weight: 800;
+
+
+          font-family:var(--globalFont);
+          letter-spacing: var(--globalLetterSpacing);
         }
 
         @keyframes buttonAnimation {
