--- a/src/Search.css
+++ b/src/Search.css
@@ -1,11 +1,12 @@
   :root{
-    --globalFont:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    --globalLetterSpacing:2px;
+    --globalFont:Verdana, Geneva, Tahoma, sans-serif;
+    --globalLetterSpacing: 0.7px;
   }
 
   html{
-    background: rgb(255,250,252);
-    background: radial-gradient(circle, rgba(255,250,252,1) 0%, rgba(202,214,228,1) 100%);
+    /* background: rgb(255,250,252);
+    background: radial-gradient(circle, rgba(255,250,252,1) 0%, rgba(202,214,228,1) 100%); */
+    background:black;
     font:var(--globalFont);
     letter-spacing: var(--globalLetterSpacing);
   }
@@ -13,7 +14,7 @@
   .parent {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(7, 150px);
+    grid-template-rows: repeat(7, 200px);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
   }
@@ -21,7 +22,7 @@
   .footer{
     grid-area: 9 / 1 / 10 / 10; 
     width:100%;
-    height:100px;
+    height:300px;
     background-color: black;
   }
   
@@ -35,14 +36,23 @@
     /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
     background-image: url('./landingbackground.jpeg');
     background-size: cover;
+    text-transform:uppercase;
+    font-weight:700;
     width:100%;
+    height: auto;
     color:white;
   }
+
+  .hide{
+    display: none;
+  }
+
   .landingBanner{
     display: flex;
     flex-direction: row;
     flex-wrap:wrap;
     justify-content: center;
+    align-items:flex-end;
   }
 
   .bannerElements {
@@ -56,7 +66,7 @@
     width:100vw;
     display: flex;
     z-index: 1;
-    background-color:black;
+    background-color:rgb(214, 36, 36);
     overflow: hidden;
     justify-content: center;
 
@@ -86,21 +96,29 @@
     display: inline-flex;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 35px 20px;
     text-decoration: none;
-    font-size: 17px;
+    font-weight: 300;
+    font-size: 15px;
   }
 
+  .navBar a:hover{
+    color: #adadad;
+    box-shadow: inset;
+  }
+  
+
   .nominees{
-    position:fixed;
-    margin-top:5vh;
+    position: fixed;
+    margin-top:10vh;
     /* background-color: black; */
     /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
-    min-height:10vh;
+    min-height:5vh;
     height:fit-content;
     padding-top:2%;
     background-color: black;
     width:100%;
+    bottom:0;
     right:0;
     display:flex;
     flex-direction: row-reverse;
@@ -108,25 +126,38 @@
   }
 
 
-    .nominees > div {
+
+    .nominees > div { 
       position: relative;
       left:0;
       z-index: 9;
-      border:3px solid white;
+      /* border:1px solid white; */
       border-radius: 20px;
 
       /* background: rgb(34,193,195);
       background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%); */
 
-      padding-top:0.5%;
-      padding-bottom:0.5%;
-      padding-right:0.5%;
-      padding-left:0.5%;
+      padding-top:1%;
+      padding-bottom:1%;
+      padding-right:1%;
+      padding-left:1%;
       height: fit-content;
       width:fit-content;
       color:white;
-      font-weight: bold;
+      font-size:small;
+      font-weight:550;
+      font-family: var(--globalFont);
       margin:0.5% 0.5% 0.5% 0.5%;
+
+      background: rgb(131,58,180);
+      background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    }
+
+    /* Remove Nominee Button */
+    .removeNominee{
+      background-color: transparent;
+      color:white;
+      border:none;
     }
 
   @keyframes slidein{
@@ -135,16 +166,28 @@
     }
 
     100%{
-      height:100px;
+      height:5vh;
     }
   }
 
   .hiddenBanner{
     position: fixed;
-    justify-self: left;
     animation: slidein 1s forwards;
+    width:100vw !important;
+    border: none!important;
+    background:black;
+    /* bottom:20px !important; */
+    /* height:5vh !important;
     background: rgb(131,58,180);
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
+    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
+    /* background-color: rgb(214, 36, 36); */
+  }
+
+  .hiddenBanner > button {
+    display: inline-block;
+    color:white;
+    background-color: transparent;
+    border:none;
   }
 
   .hiddenLayer{
@@ -181,15 +224,15 @@
       width:50%;
       height:5vh;
       color:white !important;
-      border:3px solid white;
+      border:2px solid white;
       border-radius: 20px;
       background-color: transparent;
-      text-transform:capitalize;
-
-      font-size: larger;
       padding-left: 1%;
       padding-right: 1%;
 
+      font-size: larger;
+      text-transform:uppercase;
+      font-weight:600;
 
       font-family:var(--globalFont);
       letter-spacing: var(--globalLetterSpacing);
@@ -198,13 +241,14 @@
     .submitQuery{
       margin-top:5%;
       margin-left: 1%;
-      color:white;
-      border:3px solid white;
+      color:white!important;
+      border:2px solid white;
       border-radius: 20px;
       background-color: transparent;
       width:20%;
       height:5vh;
-      text-transform:capitalize;
+      text-transform:uppercase;
+      font-weight: 600;
       font-size: larger;
 
 
@@ -278,7 +322,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    padding-top:10%;
+    padding-top:1%;
     padding-bottom:10px;
     padding-left: 12%;
     padding-right:12%;
@@ -304,12 +348,14 @@
   /* Buttons */
   .paginateButtons{
     align-self: flex-end;
-    padding-bottom: 2%;
+    padding-top:5%;
+    padding-bottom: 5%;
   }
 
   .paginateBackwards{
     position:absolute;
-    left:25%;
+    left:10%;
+    color:white;
     background-color: transparent;
     border:none;
 
@@ -322,7 +368,8 @@
 
   .paginateForwards{
     position:absolute;
-    right:25%;
+    right:10%;
+    color:white;
     background-color: transparent;
     border:none;
 
@@ -331,6 +378,10 @@
 
     font-family:var(--globalFont);
     letter-spacing: var(--globalLetterSpacing);
+  }
+
+  .paginateBackwards:hover,.paginateForwards:hover{
+    color:rgb(247, 247, 140);
   }
 
   /* movies */
