--- a/src/Search.css
+++ b/src/Search.css
@@ -6,7 +6,7 @@
   html{
     /* background: rgb(255,250,252);
     background: radial-gradient(circle, rgba(255,250,252,1) 0%, rgba(202,214,228,1) 100%); */
-    background:black;
+    background:#020402;
     font:var(--globalFont);
     letter-spacing: var(--globalLetterSpacing);
   }
@@ -19,9 +19,9 @@
     z-index: 1;
     position:fixed;
     height:100vh;
-    width:100vw;
+    width:100%;
     opacity: 0.3;
-    background-color: black;
+    background-color: #020402;
   }
   
   .parent {
@@ -30,39 +30,39 @@
     grid-template-rows: repeat(7, 200px);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    padding:0%;
+    margin:0%;
   }
 
-  /* Nav Bar */
-  .div1 { 
-    grid-area: 1 / 1 / 4 / 9; 
-    /* justify-self: left; */
-    /* color:#E8E9F3; */
-    z-index:9;
-    /* background-color: black; */
-    /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
-    display: flex;
-    flex-wrap: wrap;
-    background-image: url('./landingbackground.jpeg');
-    background-size: cover;
-    text-transform:uppercase;
-    font-weight:700;
-    width:100%;
-    height: auto;
-    color:#E8E9F3;
-  }
-  
   .hide{
     display: none;
   }
   
-  /* Add a black background color to the top navigation */
+
+  .div1 { 
+    grid-area: 1 / 1 / 4 / 9; 
+
+    background-image: url('./landingbackground.jpeg');
+    background-size: cover;
+    text-transform:uppercase;
+    font-weight:700;
+    width:120%;
+    height: auto;
+    color:#E8E9F3;
+  }
+  
+
+  /* Nav Bar */
+  /* Add a #020402 background color to the top navigation */
   .navBar {
     position:fixed;
-    width:100vw;
-    display: flex;
+    width:100%;
+ 
     z-index: 1;
     background-color:#CF0227;
     overflow: hidden;
+
+    display: flex;
     justify-content: center;
     
     font-family:var(--globalFont);
@@ -107,11 +107,19 @@
   
   .landingBanner{
     display: flex;
-    flex-direction: row;
-    flex-wrap:wrap;
+    width:100%;
     justify-content: center;
-    align-items:flex-end;
+    align-items: center;
+    align-content: flex-end;
+    height:inherit;
   }
+
+  .bannerElements{
+
+    justify-self: center;
+    align-self: center;
+  }
+
 
   /* Notification Banner */
 
@@ -119,7 +127,7 @@
     /* position: fixed; */
     animation: slidein 1s forwards;
     height: 3vh;
-    width:100vw !important;
+    width:100% !important;
     border: none!important;
     padding-bottom:2%;
 
@@ -136,19 +144,17 @@
     /* background-color: rgb(214, 36, 36); */
   }
   
-  .bannerElements {
-    flex-shrink: 5;
-  }
+
   
   .nominees{
     position: fixed;
     margin-top:10vh;
-    /* background-color: black; */
+    /* background-color: #020402; */
     /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
     min-height:1vh;
     height:fit-content;
     padding-top:2%;
-    background-color: black;
+    background-color: #020402;
     width:100%;
     bottom:0;
     right:0;
@@ -207,11 +213,11 @@
   }
   
   .submitVote{
-    color:black;
+    color:#020402;
     font-weight:900;
     font-size: 700;
     text-transform: uppercase;
-    border:3px solid black;
+    border:3px solid #020402;
     border-radius: 25px;
     background-color: #E8E9F3;
     min-width: fit-content;
@@ -233,24 +239,22 @@
   /* Search Form Title */
   
   .div2 {
-    grid-area: 2 / 2 / 4 / 8; 
+    grid-area: 2 / 2 / 4 / 9; 
   }
   
   /* Input */
   
   .div3 {
     grid-area: 4 / 1 / 5 / 9;
-    width: 100%;
-    justify-self: center;
-    background-color: black;
+    background-color: #020402;
   }
-  
+
   .searchBar{
     margin-top:5%;
     width:50%;
     height:5vh;
     color:#E8E9F3 !important;
-    border:.5px solid black;
+    border:.5px solid #020402;
     border-radius: 20px;
     /* background-color: transparent; */
     padding-left: 1%;
@@ -263,8 +267,8 @@
     font-family:var(--globalFont);
     letter-spacing: var(--globalLetterSpacing);
 
-    background-image: url('./landingbackground.jpeg');
-    background-size: cover;
+    /* background-image: url('./landingbackground.jpeg');
+    background-size: cover; */
     /* background: rgb(58, 180, 170);
     background: linear-gradient(90deg, rgb(58, 176, 180) 0%, rgb(204, 253, 29) 50%, rgba(252,176,69,1) 100%);   */
 
@@ -278,7 +282,7 @@
     margin-top:5%;
     margin-left: 1%;
     color:#E8E9F3!important;
-    border:1.5px solid black;
+    border:1.5px solid #020402;
     border-radius: 20px;
     background-color: #CF0227;
     /* background-image: url('./landingbackground.jpeg');
@@ -319,7 +323,7 @@
   /* Button */
   
   .div4 { 
-    grid-area: 4 / 6 / 5 / 8; 
+    grid-area: 4 / 6 / 5 / 9; 
     /* align-self: center; */
     
     margin-top:0px;
@@ -537,9 +541,9 @@
     background-color: transparent !important;
   }
 
-  .footer{
+  /* .footer{
     grid-area: 9 / 1 / 10 / 10; 
     width:100%;
     height:300px;
-    background-color: black;
-  }
+    background-color: #020402;
+  } */
