Create Confirm Component

--- a/src/Search.css
+++ b/src/Search.css
@@ -136,7 +136,7 @@
   .nominees{
     position: fixed;
     margin-top:10vh;
-    z-index: 9;
+    z-index: 8;
     /* background-color: #020402; */
     /* background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%); */
     min-height:1vh;
@@ -599,6 +599,11 @@
     border-style: solid;
     border-width: 2px;
     background-color: transparent !important;
+  }
+
+  .confirmationDialogue{
+    display:none;
+    z-index: 9;
   }
 
   .footer{
