--- a/src/Confirm.css
+++ b/src/Confirm.css
@@ -1,15 +1,14 @@
 .confirm{
   display: flex;
+  flex-direction: column;
   align-items: center;
   width: 100vw;
   height:100vh;
   padding: 25%;
-
   color:white;
 }
 
-/* .movie , button{
-  background-color: aliceblue;
+.movie{
   margin-left:2%;
   margin-right:2%;
-} */
+}
